--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body, h1, h2, p, a, div, footer {
 }
 
 p{
-    font-size: 0.75em;
+    font-size: 1.25em;
     color: #fff;
 }
 
@@ -20,7 +20,7 @@ body {
 
 hr{
     border: 0;
-    height: 1px;
+    height: 2px;
     background-color: #fff;
     margin: 10px auto;
     width: 100%;
@@ -47,7 +47,7 @@ hr{
 }
 
 .social_window_header h1{
-    font-size: 1em;
+    font-size: 1.7em;
     color: #fff;
     margin: 0;
 }
@@ -55,11 +55,13 @@ hr{
 .gif_1{
     align-self: center;
     padding-top: 0;
-    width: 1.3em;
-    height: 1.3em;
+    width: 2em;
+    height: 2em;
 }
 
 .close_button{
+    position: relative;
+    top: 5px;
     float: right;
     color : #fff;
     background-color: #000000;
@@ -72,7 +74,7 @@ hr{
 .profile {
     padding: 2%;
     display: grid;
-    grid-template-columns: 80px auto; /* first column for profile pic + name, second column for text */
+    grid-template-columns: 100px auto; /* first column for profile pic + name, second column for text */
     gap: 10px;
     align-items: start;
 }
@@ -87,17 +89,19 @@ hr{
 
 /* Profile picture styling */
 .profile_pic {
-    width: 50px;
-    height: 50px;
+    position: relative;
+
+    width: 77px;
+    height: 77px;
     display: block;
-    border-radius: 100%;
-    margin: 0 auto;
+    border-radius: 50%;
+    margin: 10px auto;
     border: 2px solid #fff;
 }
 
 /* Name styling */
 .name {
-    font-size: 0.8em;
+    font-size: 1.6em;
     color: #fff;
 }
 
@@ -107,14 +111,14 @@ hr{
 }
 
 .link_title h1{
-    font-size: 1em;
+    font-size: 2em;
     color: #fff;
     margin: 0;
 }
 
 .gif_2{
-    width: 2em;
-    height: 2.3em;
+    width: 4em;
+    height: 4.6em;
     margin-left: 5px;
 }
 
@@ -129,8 +133,8 @@ hr{
 }
 
 .interest_img{
-    height: 50px;
-    width: 50px;
+    height: 66px;
+    width: 66px;
     border: 2px solid #fff;
     border-radius: 100%;
 }
