--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ hr{
     margin-top: 10px;
     padding: 2%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
     align-items: start;
 
