--- a/gamesstyles.css
+++ b/gamesstyles.css
@@ -33,6 +33,12 @@ hr{
     margin: 10px auto;
     width: 100%;
 }
+
+.main_gif{
+    margin-top: 20px;
+    height: 77px;
+    width: 77px;
+}
 /* social 1 */
 .social_window{
     padding: 5px;
