--- a/bookstyles.css
+++ b/bookstyles.css
@@ -39,8 +39,8 @@ h1 {
 }
 
 p{
-    
     font-family:"Bytesized", sans-serif ;
+    max-width: 255px;
     text-align: left;
     font-size: 1.20em;
     color: #fff;
@@ -93,6 +93,7 @@ body {
 }
 
 .dune1 {
+    
     width: 100%;
     max-height: 400px;
     object-fit: contain;
@@ -198,3 +199,21 @@ body {
 .black_text{
     color: #000;
 }
+
+.matrix{
+        z-index:2;
+        pointer-events:none;
+        position:fixed;
+        height:1000%;
+        width:1000%;
+        bottom:0;
+        top:0;
+        right:0;
+        left:0;
+        background-image:url('./Booksite/bayer.png');
+        background-attachment:fixed;
+        text-align:center;
+        mix-blend-mode:soft-light;
+      }
+
+.bookshelve { position: relative; z-index: 1; }
