--- a/gamesstyles.css
+++ b/gamesstyles.css
@@ -59,11 +59,6 @@ hr{
     background-color: #000000cd;
 }
 
-.weirdass{
-    margin: 5%;
-    height: 200px;
-    width: 100px;
-}
 
 .social_window_header{
     white-space: nowrap;
@@ -74,9 +69,9 @@ hr{
     background-color: #1c6d03;
 }
 .social_window_header *{
-
+    
     display: inline-block;
-
+    
 }
 
 .social_window_header h1{
@@ -96,7 +91,7 @@ hr{
 
 .close_button{
     padding: 2px 5px ; 
-
+    
     text-decoration: none;
     position: relative;
     top: 5px;
@@ -106,11 +101,11 @@ hr{
     border: 0.5px solid #fff;
     border-top: 2.5px solid #fff;
     margin: 5px;
-
+    
 }
 .toggle_button{
     padding: 2px 5px ; 
-
+    
     text-decoration: none;
     position: relative;
     top: 5px;
@@ -120,7 +115,7 @@ hr{
     border: 0.5px solid #fff;
     border-top: 2.5px solid #fff;
     margin: 5px;
-
+    
 }
 
 /* Hide the checkbox visually */
@@ -151,7 +146,7 @@ hr{
     object-fit: contain;
     display: block;
     margin: 0px auto;
-
+    
 }
 
 .social_window_2{
@@ -170,9 +165,9 @@ hr{
     background-color: #6d0303;
 }
 .social_window_header_2 *{
-
+    
     display: inline-block;
-
+    
 }
 
 .social_window_header_2 h1{
@@ -192,7 +187,7 @@ hr{
 
 .close_button{
     padding: 2px 5px ; 
-
+    
     text-decoration: none;
     position: relative;
     top: 5px;
@@ -202,11 +197,11 @@ hr{
     border: 0.5px solid #fff;
     border-top: 2.5px solid #fff;
     margin: 5px;
-
+    
 }
 .toggle_button_2{
     padding: 2px 5px ; 
-
+    
     text-decoration: none;
     position: relative;
     top: 5px;
@@ -216,7 +211,7 @@ hr{
     border: 0.5px solid #fff;
     border-top: 2.5px solid #fff;
     margin: 5px;
-
+    
 }
 
 /* Hide the checkbox visually */
@@ -248,7 +243,7 @@ hr{
     object-fit: contain;
     display: block;
     margin: 0px auto;
-
+    
 }
 
 .social_window_3{
@@ -267,9 +262,9 @@ hr{
     background-color: #FDF800;
 }
 .social_window_header_3 *{
-
+    
     display: inline-block;
-
+    
 }
 
 .social_window_header_3 h1{
@@ -289,7 +284,7 @@ hr{
 
 .close_button{
     padding: 2px 5px ; 
-
+    
     text-decoration: none;
     position: relative;
     top: 5px;
@@ -299,11 +294,11 @@ hr{
     border: 0.5px solid #fff;
     border-top: 2.5px solid #fff;
     margin: 5px;
-
+    
 }
 .toggle_button_3{
     padding: 2px 5px ; 
-
+    
     text-decoration: none;
     position: relative;
     top: 5px;
@@ -313,7 +308,7 @@ hr{
     border: 0.5px solid #fff;
     border-top: 2.5px solid #fff;
     margin: 5px;
-
+    
 }
 
 /* Hide the checkbox visually */
@@ -336,6 +331,33 @@ hr{
     transition: max-height 0.5s ease-in;
     
 }
+/* windows 95 games link */
 
+.weirdass{
+    margin: 5%;
+    height: 150px;
+    width: 150px;
+}
+.W95gamesLink {
+    max-width: 275px;
+    cursor: pointer;
+    background-color: silver;
+    border: solid 5px;
+    border-color:#FFFFFF #808080 #808080 #FFFFFF;
+    width: 70%;
+    display: inline-block;
+    margin: 10px;
+    text-align: center;
+    justify-content: center;
+    color: #000000;
+    text-decoration: none;
+    margin-bottom: 50px;
+}
 
-
+.W95gamesLink p {
+    justify-self: center;
+    margin: 5px 0;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: #000000;
+}
