--- a/W95Games/95gamesStyles.css
+++ b/W95Games/95gamesStyles.css
@@ -7,6 +7,17 @@ body {
     background-color: #0ea678;
     background-image: none;
 }
+.matrix{
+  position: fixed; inset: 0;          
+  z-index: 99;
+  pointer-events: none;
+  background-image: url('bayer.png'); 
+  background-repeat: repeat;
+  background-size: 10px 10px;         
+  image-rendering: pixelated;        
+  mix-blend-mode: soft-light;           
+                     
+}
 
 .button-container {
     display: flex;
@@ -36,18 +47,57 @@ body {
     overflow-y:auto;
     
 }
+/*desktop styles */
+.newApp-wrap {
+    font-family: 'W95FA', sans-serif;
 
-.matrix{
-  position: fixed; inset: 0;          
-  z-index: 99;
-  pointer-events: none;
-  background-image: url('/bayer.png'); 
-  background-repeat: repeat;
-  background-size: 10px 10px;         
-  image-rendering: pixelated;        
-  mix-blend-mode: soft-light;           
-                     
+    margin-bottom: 100px;
 }
+
+.newApp {
+    cursor: pointer;
+    margin: 10px 0 0 10px;
+    display: block;
+    color: #ffffff;
+    height: 50px;
+    width: 50px;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+
+}
+.newApp img {
+    width: 100%;
+    height: 100%;
+    align-self: center;
+    align-items: center;
+    image-rendering: pixelated;
+}
+.appWindow {
+    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    padding: 0.5%;
+    padding-top: 0.35%;
+    font-family: 'W95FA', sans-serif;
+    margin:  0 auto;
+    background-color: #e9e8e8;
+    width: 90%;
+    max-width: 500px;
+}
+.appWindow.closed {
+  display: none !important; /* temporary to prove CSS applies */
+}
+
+.appWindow.dragging
+{
+    cursor: grabbing;
+    user-select: none;
+}
+
 #openTetrisApp {
     cursor: pointer;
     margin: 10px 0 0 10px;
@@ -72,6 +122,7 @@ body {
 /*tetrisgame Window */
 
 .gamewindow {
+    z-index: 1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -106,7 +157,7 @@ h1 {
     ;
 }
 .window-header{
-  
+  z-index: 1;               
   display: flex;
   flex-wrap: nowrap;             /* evita salto de línea */
   align-items: center;
@@ -121,11 +172,13 @@ h1 {
 }
 
 .title-buttons{
+
   display: flex;
   gap: 4px;
 }
 
 .titleBtn, .close-Btn{
+  z-index: inherit;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -175,7 +228,7 @@ h1 {
   background: rgba(0,0,0,.7);
   color: #fff;
   font-family: 'W95FA', sans-serif;
-  z-index: 5;               /* above the grid */
+  z-index: 7;               /* above the grid */
   pointer-events: auto;     /* blocks mouse/touch to game */
 }
 .gamewindow.paused .pause-overlay,
@@ -395,6 +448,11 @@ h1 {
         padding: 0;
     }
     #downArrow{
+        -moz-user-select: -moz-none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -o-user-select: none;
+         user-select: none;
         image-rendering: pixelated;
         
         /* Windows 95 style */
